--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
-    "paths": {
-      "ClientApp/*": ["./ClientApp/*"]
-    }
+    "baseUrl": "src"
+   
   }
 }
