--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "hotreact",
+  "name": "sitemanager-readonly",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@handsontable/react": "^3.0.0",
     "axios": "^0.18.0",
     "handsontable": "^7.0.2",
     "react": "^16.8.6",
