--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "handsontable": "^7.0.2",
     "react": "^16.8.6",
+    "react-data-grid": "^6.1.0",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
   },
